{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 291,
  "lineage": "b3998881-0b03-0898-8478-a4ed3ed8f9be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492736935295:security-group/sg-0d5ceb6ea480650cc",
            "description": "App prod security group",
            "egress": [],
            "id": "sg-0d5ceb6ea480650cc",
            "ingress": [],
            "name": "app-prod",
            "name_prefix": "",
            "owner_id": "492736935295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492736935295:security-group/sg-0e5dc06a2ba2869e0",
            "description": "Allow inbound postgre traffic",
            "egress": [],
            "id": "sg-0e5dc06a2ba2869e0",
            "ingress": [],
            "name": "rds-app",
            "name_prefix": "",
            "owner_id": "492736935295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-outgoing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1394729308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e5dc06a2ba2869e0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3199418364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e5dc06a2ba2869e0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0a1f24e399b1b66bf",
            "tags": {
              "Name": "test-vpc",
              "Owner": "Mark Jagyo"
            },
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-078c4b6b7303ea53d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-220-209-90.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.209.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat--test-vpc",
              "Owner": "Mark Jagyo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492736935295:internet-gateway/igw-0ac7469f21aade2b5",
            "id": "igw-0ac7469f21aade2b5",
            "owner_id": "492736935295",
            "tags": {
              "Name": "test-vpc",
              "Owner": "Mark Jagyo"
            },
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078c4b6b7303ea53d",
            "id": "nat-0a204de1c90a5cdfa",
            "network_interface_id": "eni-0b85a3ca09b4671a5",
            "private_ip": "10.0.3.153",
            "public_ip": "18.220.209.90",
            "subnet_id": "subnet-0baa6ab54563b7b82",
            "tags": {
              "Name": "nat-test-vpc",
              "Owner": "Mark Jagyo"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06fc30abbb955e57c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a204de1c90a5cdfa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fc30abbb955e57c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac7469f21aade2b5",
            "id": "r-rtb-01fc517961f2e6e7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fc517961f2e6e7f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac7469f21aade2b5",
            "id": "r-rtb-01fc517961f2e6e7f2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fc517961f2e6e7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06fc30abbb955e57c",
            "owner_id": "492736935295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-test-vpc",
              "Owner": "Mark Jagyo"
            },
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01fc517961f2e6e7f",
            "owner_id": "492736935295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-public",
              "Owner": "Mark Jagyo"
            },
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070b65ceea54455c1",
            "route_table_id": "rtb-01fc517961f2e6e7f",
            "subnet_id": "subnet-0baa6ab54563b7b82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5f53d7e9f2f0bed",
            "route_table_id": "rtb-01fc517961f2e6e7f",
            "subnet_id": "subnet-0d454da50ef4fb354"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492736935295:subnet/subnet-0baa6ab54563b7b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0baa6ab54563b7b82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492736935295",
            "tags": {
              "Name": "test-vpc-public-us-east-2a",
              "Owner": "Mark Jagyo",
              "test": "for testing"
            },
            "tags_all": {
              "Name": "test-vpc-public-us-east-2a",
              "Owner": "Mark Jagyo",
              "test": "for testing"
            },
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492736935295:subnet/subnet-0d454da50ef4fb354",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d454da50ef4fb354",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492736935295",
            "tags": {
              "Name": "test-vpc-public-us-east-2b",
              "Owner": "Mark Jagyo",
              "test": "for testing"
            },
            "tags_all": {
              "Name": "test-vpc-public-us-east-2b",
              "Owner": "Mark Jagyo",
              "test": "for testing"
            },
            "vpc_id": "vpc-06f0d8811d37299ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492736935295:vpc/vpc-06f0d8811d37299ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7563148772187c9",
            "default_route_table_id": "rtb-0cc93445f115e835f",
            "default_security_group_id": "sg-019f380c046263829",
            "dhcp_options_id": "dopt-3538d45e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06f0d8811d37299ea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cc93445f115e835f",
            "owner_id": "492736935295",
            "tags": {
              "Name": "test-vpc",
              "Owner": "Mark Jagyo"
            },
            "tags_all": {
              "Name": "test-vpc",
              "Owner": "Mark Jagyo"
            }
          }
        }
      ]
    }
  ]
}